--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 REACT_APP_TODO_API_KEY="https://appbe.up.railway.app/todo/"
 REACT_APP_BLOG_API_KEY="https://appbe.up.railway.app/blog/"
-REACT_APP_AMAZON_API_KEY="http://localhost:9999/amazon/"
+REACT_APP_AMAZON_API_KEY="https://appbe.up.railway.app/amazon/"
+REACT_APP_FOLDERCHECK_API_KEY="http://localhost:9999/folderCheck"
+REACT_APP_SHORTURL_API_KEY="https://appbe.up.railway.app/shortUrl"
