--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ REACT_APP_AMAZON_API_KEY="https://appbe.up.railway.app/amazon/"
 REACT_APP_FOLDERCHECK_API_KEY="http://localhost:9999/folderCheck"
 REACT_APP_SHORTURL_API_KEY="https://appbe.up.railway.app/shortUrl"
 REACT_APP_LOGIN_API_KEY="https://appbe.up.railway.app/user"
+REACT_APP_FORGOTPASS_API_KEY="https://appbe.up.railway.app/forgotPassword"
